force-app/main/default/objects/CCX_On_Project__c/CCX_On_Project__c.object-meta.xml
<CustomObject>
    <label>CCX On Project</label>
    <nameField>
        <displayFormat>OP-{0000}</displayFormat>
        <label>CCX On Project ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCX On Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>