force-app/main/default/objects/CCX_On_Project__c/fields/CCX_Is_Client__c.field-meta.xml
<CustomField>
    <fullName>CCX_Is_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCX Is Client</label>
    <type>Checkbox</type>
</CustomField>