force-app/main/default/objects/CCX_On_Project__c/fields/CCX_Is_Partner__c.field-meta.xml
<CustomField>
    <fullName>CCX_Is_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCX Is Partner</label>
    <type>Checkbox</type>
</CustomField>