force-app/main/default/objects/CCX_On_Project__c/fields/CCX_Project__c.field-meta.xml
<CustomField>
    <fullName>CCX_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCX Project</label>
    <referenceTo>CCX_Project__c</referenceTo>
    <relationshipLabel>CCX On Projects</relationshipLabel>
    <relationshipName>CCX_On_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>