force-app/main/default/objects/CCX_On_Project__c/fields/CCX_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CCX_Start_Date__c</fullName>
    <label>CCX Start Date</label>
    <type>Date</type>
</CustomField>